Fixed the design and image overflow

--- a/src/chat.css
+++ b/src/chat.css
@@ -123,3 +123,23 @@
     min-height: 100%; /* Ensure the content fills the entire scrolling area */
   }
   
+  .imageSent {
+    max-width: 400px;
+
+  }
+
+  .uploadButton {
+    max-width: 40px;
+    max-height: 30px;
+  }
+
+  .inputBox {
+    margin-top: 30px;
+    max-height: 30px;
+    max-width: 500px;
+    margin-top: 10px;
+  }
+
+  .button1 {
+    max-height: 30px;
+}
